--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -55,10 +55,10 @@ ul {
   top: 0;
   border-right: 1px solid $border;
   background-color: #fff;
-  transition: width 0.2s ease-in-out;
+  transition: width 0.3s ease;
 
   &.active {
-    width: 270px;
+    width: 260px;
 
     .logo {
       display: flex;
