--- a/src/styles/Dashboard/dashboard.scss
+++ b/src/styles/Dashboard/dashboard.scss
@@ -683,17 +683,11 @@
       }
 
       .emp_statistics {
-        height: 0;
-        overflow: hidden;
-        transition: height 0.3s ease;
-
-        &.active {
-          border-radius: 8px;
-          border: 2px solid #e6eff7;
-          padding: 0 30px 30px 30px;
-          height: 185px;
+        .banner_cards {
+          margin-top: 25px;
+          padding: 0 30px;
+          width: auto;
         }
-
         .bc_center {
           width: 25%;
           .card_title {
