--- a/src/styles/Navbar/navbar.scss
+++ b/src/styles/Navbar/navbar.scss
@@ -139,7 +139,7 @@
       .profile_popup {
         position: absolute;
         top: 140%;
-        right: 30%;
+        right: 10px0;
         background: #fff;
         box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
           rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
